--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-03-image-finder",
+  "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://yana-shkvarovskaya.github.io/goit-react-hw-03-image-finder/",
